# OpenMind

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
api/: dispatch.ts  execute.ts  public-config.ts
api/_lib/: readJsonBody.ts  x402Store.ts
api/x402/: authorize.ts  faucet.ts  pay.ts  status.ts
chain-service/: README.md  env.local.example  package-lock.json  package.json  server.mjs
config/: conversation.mockinput.json5  om1.conversation.chain_action.json5
executor/: README.md  app.py  chain_client.py  openmind_client.py  pyproject.toml  speech.py  test_sentences.py
public/: index.html
