[project]
name = "openmind-executor"
version = "0.1.0"
description = "Local robot executor for OpenMind gateway (verifies signed requests and executes commands)."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "uvicorn[standard]==0.32.1",
]

[tool.uv]
dev-dependencies = []


